2013-02-28  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Non-parenthesized variable names can not contain a dollar sign
    * Trim leading empty line from if-statement body

2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Printing of warnings to stderr can be disabled
    * Added conditional statements (if-then, if-then-else)
    * Added line splicing (\) in template body

2013-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Templates can now expand to a StringBuffer

2013-02-02 Jesper Öqvist <jesper@cs.lth.se>

    * Template expansion warnings are printed to stderr