@@ -2,6 +2,8 @@
 
     * Non-parenthesized variable names can not contain a dollar sign
     * Trim leading empty line from if-statement body
+    * Conditionals surrounded by whitespace on a line by themself are
+    stripped of their surrounding whitespace including the newline
 
 2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
